@@ -1,6 +1,7 @@
 package cn.iocoder.yudao.module.mes.service.wm.returnsales;
 
 import cn.hutool.core.collection.CollUtil;
+
 import cn.hutool.core.util.ObjUtil;
 import cn.iocoder.yudao.framework.common.pojo.PageResult;
 import cn.iocoder.yudao.framework.common.util.collection.CollectionUtils;
@@ -27,6 +28,7 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.validation.annotation.Validated;
 
 import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -163,7 +165,7 @@ public class MesWmReturnSalesServiceImpl implements MesWmReturnSalesService {
                     allDetails, MesWmReturnSalesDetailDO::getLineId);
             // 检查每行的明细数量
             for (MesWmReturnSalesLineDO line : lines) {
-                List<MesWmReturnSalesDetailDO> details = detailMap.getOrDefault(line.getId(), List.of());
+                List<MesWmReturnSalesDetailDO> details = detailMap.getOrDefault(line.getId(), Collections.emptyList());
                 BigDecimal totalDetailQuantity = CollectionUtils.getSumValue(details,
                         MesWmReturnSalesDetailDO::getQuantity, BigDecimal::add, BigDecimal.ZERO);
                 // 对比行数量与明细总数量，不满足直接抛出
